grammar.js
    source_file: ($) => repeat(choice($._declaration, $._newline, ";")),

    _declaration: ($) =>
      choice(
        $.import_declaration,
        $.form_declaration,
        $.type_declaration,
        $.fixity_declaration,
        $.impl_declaration,
        $.type_annotation,
        $.value_definition,
      ),

    // ════════════════════════════════════════════════════════════════════
    //  Declarations
    // ════════════════════════════════════════════════════════════════════

    // prec.right: after `import ModuleName`, prefer consuming `as`/`(`
    // as part of this declaration rather than starting a new one.
    type_annotation: ($) =>
      seq(
        field("name", choice($.identifier, $.parenthesized_operator)),
        "::",
        field("type", $._type),
      ),

    value_definition: ($) =>
      seq(
        field("name", choice($.identifier, $.parenthesized_operator)),
        ":=",
        field("value", $._expression),
      ),

    _type_binder: ($) => choice($.identifier, $.kinded_variable),

    kinded_variable: ($) =>
      seq("(", field("name", $.identifier), ":", field("kind", $._kind), ")"),

    _kind: ($) => choice($.kind_arrow, $._kind_atom),

    kind_arrow: ($) => prec.right(1, seq($._kind_atom, "->", $._kind)),

    _kind_atom: ($) => choice($.constructor, $.identifier, seq("(", $._kind, ")")),

    // ════════════════════════════════════════════════════════════════════
    //  Type expressions
    //
    //  Flat supertype: all type forms at one level. Left-recursive
    //  type_application resolved by prec.left(10). No separate _type_atom.
    // ════════════════════════════════════════════════════════════════════

    _type: ($) =>
      choice(
        $.forall_type,
        $.qualified_type,
        $.function_type,
        $.type_application,
        $.type_case,
        // Atoms directly in supertype:
        $.identifier,
        $.constructor,
        $.qualified_type_constructor,
        $.wildcard,
        $.unit_type,
        $.parenthesized_type,
        $.tuple_type,
        $.row_type,
      ),

    forall_type: ($) => seq("\\", repeat1($._type_binder), ".", $._type),

    // Constraint is just _type before =>. Eq a parses as type_application(Eq, a).
    qualified_type: ($) => prec.right(1, seq($._type, "=>", $._type)),

    // Left-recursive type application: Maybe Int -> type_application(Maybe, Int)
    type_application: ($) =>
      prec.left(10, seq(
        field("constructor", $._type),
        field("argument", $._type),
      )),

    function_type: ($) => prec.right(2, seq($._type, "->", $._type)),

    // Type-level case expression (used in type families).
    // `case scrutinee { Pattern => Type; ... }`
    qualified_type_constructor: ($) =>
      seq(
        field("module", $.constructor),
        $._qualified_dot,
        field("name", alias(token.immediate(/[A-Z][a-zA-Z0-9_']*/), $.constructor)),
      ),

    // Type arguments for ADT constructors and instance heads.
    // These are "atomic" types only (not application/function/qualified).
    _type_arg: ($) =>
      choice(
        $.identifier,
        $.constructor,
        $.qualified_type_constructor,
        $.wildcard,
        $.unit_type,
        $.parenthesized_type,
        $.tuple_type,
        $.row_type,
      ),

    unit_type: ($) => prec(2, seq("(", ")")),

    parenthesized_type: ($) => seq("(", $._type, ")"),

    tuple_type: ($) => seq("(", $._type, ",", sep1($._type, ","), ")"),

    row_type: ($) =>
      seq(
        "{",
        optional(
          choice(
            seq(sep1($.row_field, ","), optional(seq("|", $.identifier))),
            seq("|", $.identifier),
          ),
        ),
        "}",
      ),

    // Row field: label : Type [@Grade]
    // Grade annotations have two surface forms:
    //   `h: Linear => Handle`  ->  row_field(h, qualified_type(Linear, Handle))
    //   `ch: Send s @Linear`   ->  row_field(ch, Send s, grade: Linear)
    // The `@Grade` form is the parser's actual syntax for multiplicity annotations.
    row_field: ($) =>
      seq(
        field("label", $.identifier),
        ":",
        field("type", $._type),
        optional(seq("@", field("grade", $._type_arg))),
      ),

    // ════════════════════════════════════════════════════════════════════
    //  Expressions
    // ════════════════════════════════════════════════════════════════════

    _expression: ($) =>
      choice(
        $.lambda_expression,
        $.case_expression,
        $.do_expression,
        $.if_expression,
        $.type_annotated_expression,
        $.evidence_injection,
        $._simple_expression,
      ),

    // If-then-else: right-associative (nested else-branches).
    lambda_expression: ($) =>
      prec.right(
        0,
        seq("\\", repeat1(field("pattern", $._simple_pattern)), ".", field("body", $._expression)),
      ),

    // case_expression uses _case_brace (external token) instead of "{".
    // This avoids the LALR shift-reduce conflict where application's
    // prec.left(10) would consume `{` as a block_expression atom,
    // preventing the scrutinee from reducing.
    case_expression: ($) =>
      seq(
        "case",
        field("scrutinee", $._scrutinee),
        $._case_brace,
        optional(seq(sep1($.case_branch, ";"), optional(";"))),
        "}",
      ),

    // Scrutinee: like _simple_expression but atoms cannot start with {.
    // Mirrors GICEL parser's noBraceAtom flag.
    _scrutinee: ($) =>
      choice(
        alias($._scrutinee_infix, $.infix_expression),
        $._scrutinee_app_or_atom,
      ),

    // Flat precedence: see comment on infix_expression. CST consumers
    // must re-bracket based on fixity declarations.
    case_branch: ($) =>
      seq(field("pattern", $._pattern), "=>", field("body", $._expression)),

    do_expression: ($) =>
      seq(
        "do",
        "{",
        optional(seq(sep1($._do_statement, ";"), optional(";"))),
        "}",
      ),

    _do_statement: ($) =>
      choice($.bind_statement, $.let_statement, $._expression),

    bind_statement: ($) =>
      seq(field("pattern", $._pattern), "<-", field("value", $._expression)),

    _application_or_atom: ($) => choice($.application, $._atom),

    application: ($) =>
      prec.left(10, seq($._application_or_atom, $._atom)),

    // Qualified references: M.x (variable), M.Just (constructor).
    // Adjacency-sensitive via _qualified_dot (external scanner).
    qualified_constructor: ($) =>
      seq(
        field("module", $.constructor),
        $._qualified_dot,
        field("name", alias(token.immediate(/[A-Z][a-zA-Z0-9_']*/), $.constructor)),
      ),

    _atom: ($) =>
      choice(
        $.identifier,
        $.constructor,
        $.qualified_variable,
        $.qualified_constructor,
        $.integer,
        $.double,
        $.string,
        $.rune,
        $.unit_expression,
        $.parenthesized_expression,
        $.tuple_expression,
        $.list_expression,
        $.record_expression,
        $.record_update_expression,
        $.block_expression,
        $.projection_expression,
        $.type_application_expression,
        $.operator_section,
        $.right_section,
        $.left_section,
        $.lambda_expression,
        $.do_expression,
        $.case_expression,
      ),

    _pattern: ($) => choice($.constructor_pattern, $._simple_pattern),

    constructor_pattern: ($) =>
      seq(choice($.constructor, $.qualified_constructor), repeat1($._simple_pattern)),

    _simple_pattern: ($) =>
      choice(
        $.identifier,
        $.wildcard,
        $.constructor,
        $.qualified_constructor,
        $.integer,
        $.double,
        $.string,
        $.rune,
        $.unit_pattern,
        $.parenthesized_pattern,
        $.tuple_pattern,
        $.record_pattern,
        $.list_pattern,
      ),

    unit_pattern: ($) => prec(2, seq("(", ")")),

    parenthesized_pattern: ($) => seq("(", $._pattern, ")"),

    tuple_pattern: ($) =>
      seq("(", $._pattern, ",", sep1($._pattern, ","), ")"),

    record_pattern: ($) =>
      seq(
        "{",
        sep1($.field_pattern, ","),
        optional(seq("|", $.wildcard)),
        "}",
      ),

    field_pattern: ($) =>
      seq(field("label", $.identifier), ":", field("value", $._pattern)),

    list_pattern: ($) =>
      seq("[", optional(sep1($._pattern, ",")), "]"),

    // ════════════════════════════════════════════════════════════════════
    //  Terminals
    // ════════════════════════════════════════════════════════════════════

    identifier: (_) => /[a-z][a-zA-Z0-9_']*|_[a-zA-Z0-9_']+/,
    constructor: (_) => /[A-Z][a-zA-Z0-9_']*/,
    // `:` and `.` are handled specially by the lexer (type annotations,
    // quantifier/lambda body separator, etc.) and must not appear in operator tokens.
    // `->` and `<-` are reserved and excluded from the operator regex
    // so they are always lexed as keyword tokens, never as operators.
    // The regex handles three cases:
    //   - 3+ operator chars (cannot be just -> or <-)
    //   - 2 operator chars that are NOT -> or <-
    //   - 1 operator char
    integer: (_) => /[0-9](_?[0-9])*/,

    // Double literal: decimal point and/or exponent, with optional underscore separators.
    // Matches: 3.14, 1e10, 1.05e+10, 2_000.5e-3
    // The decimal-point form requires a digit after `.` to avoid ambiguity with
    // the composition operator (infixr 9).
    double: (_) => token(choice(
      /[0-9](_?[0-9])*\.[0-9](_?[0-9])*([eE][+-]?[0-9](_?[0-9])*)?/,
      /[0-9](_?[0-9])*[eE][+-]?[0-9](_?[0-9])*/,
    )),

    wildcard: (_) => "_",

    string: ($) =>
      seq('"', repeat(choice($.escape_sequence, /[^"\\]+/)), '"'),

    rune: ($) => seq("'", choice($.escape_sequence, /[^'\\]/), "'"),

    escape_sequence: (_) => /\\[ntr\\"'0]/,
