test/corpus/literals.txt
===============
Integer literal zero
===============

x := 0

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer)))

===============
Integer literal
===============

x := 42

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer)))

===============
Integer literal large
===============

x := 999999

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer)))

===============
String literal simple
===============

x := "hello"

---

(source_file
  (value_definition
    name: (identifier)
    value: (string)))

===============
String literal empty
===============

x := ""

---

(source_file
  (value_definition
    name: (identifier)
    value: (string)))

===============
String with newline escape
===============

x := "hello\nworld"

---

(source_file
  (value_definition
    name: (identifier)
    value: (string
      (escape_sequence))))

===============
String with tab escape
===============

x := "tab\there"

---

(source_file
  (value_definition
    name: (identifier)
    value: (string
      (escape_sequence))))

===============
String with backslash escape
===============

x := "quote\\"

---

(source_file
  (value_definition
    name: (identifier)
    value: (string
      (escape_sequence))))

===============
String with null escape
===============

x := "null\0end"

---

(source_file
  (value_definition
    name: (identifier)
    value: (string
      (escape_sequence))))

===============
Rune literal
===============

x := 'a'

---

(source_file
  (value_definition
    name: (identifier)
    value: (rune)))

===============
Rune with newline escape
===============

x := '\n'

---

(source_file
  (value_definition
    name: (identifier)
    value: (rune
      (escape_sequence))))

===============
Rune with backslash escape
===============

x := '\\'

---

(source_file
  (value_definition
    name: (identifier)
    value: (rune
      (escape_sequence))))

===============
Integer with underscore separators
===============

x := 100_000

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer)))

===============
Double literal decimal
===============

x := 3.14

---

(source_file
  (value_definition
    name: (identifier)
    value: (double)))

===============
Double literal exponent only
===============

x := 1e10

---

(source_file
  (value_definition
    name: (identifier)
    value: (double)))

===============
Double literal with decimal and exponent
===============

x := 1.05e+10

---

(source_file
  (value_definition
    name: (identifier)
    value: (double)))

===============
Double literal with underscores
===============

x := 2_000.5e-3

---

(source_file
  (value_definition
    name: (identifier)
    value: (double)))
