test/corpus/patterns.txt
===============
Variable pattern
===============

f := \x. x

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (identifier)
      body: (identifier))))

===============
Wildcard pattern
===============

f := \_. 1

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (wildcard)
      body: (integer))))

===============
Constructor pattern nullary
===============

f := \True. 1

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (constructor)
      body: (integer))))

===============
Constructor pattern with argument
===============

f := \(Just x). x

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (parenthesized_pattern
        (constructor_pattern
          (constructor)
          (identifier)))
      body: (identifier))))

===============
Tuple pattern two elements
===============

f := \(a, b). a

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (tuple_pattern
        (identifier)
        (identifier))
      body: (identifier))))

===============
Tuple pattern three elements
===============

f := \(a, b, c). a

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (tuple_pattern
        (identifier)
        (identifier)
        (identifier))
      body: (identifier))))

===============
Record pattern closed
===============

f := \{ x: a, y: b }. a

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (record_pattern
        (field_pattern
          label: (identifier)
          value: (identifier))
        (field_pattern
          label: (identifier)
          value: (identifier)))
      body: (identifier))))

===============
Record pattern open
===============

f := \{ x: a | _ }. a

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (record_pattern
        (field_pattern
          label: (identifier)
          value: (identifier))
        (wildcard))
      body: (identifier))))

===============
Unit pattern
===============

f := \(). 1

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (unit_pattern)
      body: (integer))))

===============
Integer literal pattern
===============

f := \0. True

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (integer)
      body: (constructor))))

===============
String literal pattern
===============

f := \"hello". True

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (string)
      body: (constructor))))

===============
Rune literal pattern
===============

f := \'a'. True

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (rune)
      body: (constructor))))

===============
Parenthesized pattern
===============

f := \(x). x

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (parenthesized_pattern
        (identifier))
      body: (identifier))))

===============
Do bind with wildcard pattern
===============

f := do { _ <- pure 1; pure 2 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (bind_statement
        pattern: (wildcard)
        value: (application
          (identifier)
          (integer)))
      (application
        (identifier)
        (integer)))))

===============
Do bind with tuple pattern
===============

f := do { (a, b) <- g; pure a }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (bind_statement
        pattern: (tuple_pattern
          (identifier)
          (identifier))
        value: (identifier))
      (application
        (identifier)
        (identifier)))))

===============
Do bind with constructor pattern
===============

f := do { (Just x) <- g; pure x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (bind_statement
        pattern: (parenthesized_pattern
          (constructor_pattern
            (constructor)
            (identifier)))
        value: (identifier))
      (application
        (identifier)
        (identifier)))))

===============
List pattern empty
===============

f := case xs { [] => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (list_pattern)
        body: (integer)))))

===============
List pattern with elements
===============

f := case xs { [a, b, c] => a }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (list_pattern
          (identifier)
          (identifier)
          (identifier))
        body: (identifier)))))

===============
Qualified constructor pattern bare
===============

f := case x { M.Nothing => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (qualified_constructor
          module: (constructor)
          name: (constructor))
        body: (integer)))))

===============
Qualified constructor pattern with arguments
===============

f := case x { (M.Just y) => y }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (parenthesized_pattern
          (constructor_pattern
            (qualified_constructor
              module: (constructor)
              name: (constructor))
            (identifier)))
        body: (identifier)))))

===============
Double literal pattern
===============

f := case x { 3.14 => True }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (double)
        body: (constructor)))))

===============
Label pattern single
===============

f := case v { #ping => 1 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (label_literal)
        body: (integer)))))

===============
Label pattern multi-branch
===============

f := case tag { #ping => 1; #quit => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (label_literal)
        body: (integer))
      (case_branch
        pattern: (label_literal)
        body: (integer)))))

===============
Label pattern with payload variable
===============

f := case v { #foo x => x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (label_pattern
          (label_literal)
          (identifier))
        body: (identifier)))))

===============
Label pattern with wildcard payload
===============

f := case v { #quit _ => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (label_pattern
          (label_literal)
          (wildcard))
        body: (integer)))))

===============
Label pattern mixed bare and payload
===============

f := case v { #foo x => x; #bar => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (label_pattern
          (label_literal)
          (identifier))
        body: (identifier))
      (case_branch
        pattern: (label_literal)
        body: (integer)))))
