test/corpus/types.txt
===============
Quantifier with single binder
===============

f :: \a. a -> a

---

(source_file
  (type_annotation
    name: (identifier)
    type: (forall_type
      (identifier)
      (function_type
        (identifier)
        (identifier)))))

===============
Quantifier with multiple binders
===============

f :: \a b. a -> b -> a

---

(source_file
  (type_annotation
    name: (identifier)
    type: (forall_type
      (identifier)
      (identifier)
      (function_type
        (identifier)
        (function_type
          (identifier)
          (identifier))))))

===============
Quantifier with kinded variable
===============

f :: \(f : Type -> Type). f a -> f b

---

(source_file
  (type_annotation
    name: (identifier)
    type: (forall_type
      (kinded_variable
        name: (identifier)
        kind: (kind_arrow
          (constructor)
          (constructor)))
      (function_type
        (type_application
          constructor: (identifier)
          argument: (identifier))
        (type_application
          constructor: (identifier)
          argument: (identifier))))))

===============
Qualified type with constraint
===============

f :: Eq a => a -> a -> Bool

---

(source_file
  (type_annotation
    name: (identifier)
    type: (qualified_type
      (type_application
        constructor: (constructor)
        argument: (identifier))
      (function_type
        (identifier)
        (function_type
          (identifier)
          (constructor))))))

===============
Function type right-associative
===============

f :: a -> b -> c

---

(source_file
  (type_annotation
    name: (identifier)
    type: (function_type
      (identifier)
      (function_type
        (identifier)
        (identifier)))))

===============
Type application single
===============

f :: Maybe Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (type_application
      constructor: (constructor)
      argument: (constructor))))

===============
Type application nested
===============

f :: Map String Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (type_application
      constructor: (type_application
        constructor: (constructor)
        argument: (constructor))
      argument: (constructor))))

===============
Unit type
===============

f :: ()

---

(source_file
  (type_annotation
    name: (identifier)
    type: (unit_type)))

===============
Parenthesized type
===============

f :: (a -> b) -> a -> b

---

(source_file
  (type_annotation
    name: (identifier)
    type: (function_type
      (parenthesized_type
        (function_type
          (identifier)
          (identifier)))
      (function_type
        (identifier)
        (identifier)))))

===============
Tuple type
===============

f :: (Int, Bool)

---

(source_file
  (type_annotation
    name: (identifier)
    type: (tuple_type
      (constructor)
      (constructor))))

===============
Three-element tuple type
===============

f :: (Int, Bool, String)

---

(source_file
  (type_annotation
    name: (identifier)
    type: (tuple_type
      (constructor)
      (constructor)
      (constructor))))

===============
Closed row type
===============

f :: { x : Int, y : Bool }

---

(source_file
  (type_annotation
    name: (identifier)
    type: (row_type
      (row_field
        label: (identifier)
        type: (constructor))
      (row_field
        label: (identifier)
        type: (constructor)))))

===============
Open row type with tail
===============

f :: { x : Int | r }

---

(source_file
  (type_annotation
    name: (identifier)
    type: (row_type
      (row_field
        label: (identifier)
        type: (constructor))
      (identifier))))

===============
Empty row type
===============

f :: {}

---

(source_file
  (type_annotation
    name: (identifier)
    type: (row_type)))

===============
Row type with only tail variable
===============

f :: { | r }

---

(source_file
  (type_annotation
    name: (identifier)
    type: (row_type
      (identifier))))

===============
Row field with grade annotation
===============

f :: { h : Linear => Handle | r }

---

(source_file
  (type_annotation
    name: (identifier)
    type: (row_type
      (row_field
        label: (identifier)
        type: (qualified_type
          (constructor)
          (constructor)))
      (identifier))))

===============
Qualified type constructor
===============

f :: M.Type -> Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (function_type
      (qualified_type_constructor
        module: (constructor)
        name: (constructor))
      (constructor))))

===============
Qualified type constructor in application
===============

f :: M.Maybe Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (type_application
      constructor: (qualified_type_constructor
        module: (constructor)
        name: (constructor))
      argument: (constructor))))

===============
Row field with multiple fields and grade
===============

f :: { x : Affine => Int, y : Bool }

---

(source_file
  (type_annotation
    name: (identifier)
    type: (row_type
      (row_field
        label: (identifier)
        type: (qualified_type
          (constructor)
          (constructor)))
      (row_field
        label: (identifier)
        type: (constructor)))))

===============
Equality constraint simple
===============

f :: a ~ Int => a -> Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (qualified_type
      (equality_constraint
        lhs: (identifier)
        rhs: (constructor))
      (function_type
        (identifier)
        (constructor)))))

===============
Equality constraint in tuple
===============

f :: (a ~ Int, Eq a) => a -> Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (qualified_type
      (tuple_type
        (equality_constraint
          lhs: (identifier)
          rhs: (constructor))
        (type_application
          constructor: (constructor)
          argument: (identifier)))
      (function_type
        (identifier)
        (constructor)))))

===============
Equality constraint with forall
===============

f :: \a. a ~ Int => a -> Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (forall_type
      (identifier)
      (qualified_type
        (equality_constraint
          lhs: (identifier)
          rhs: (constructor))
        (function_type
          (identifier)
          (constructor))))))

===============
Label literal in type application
===============

f :: State #myState Int -> Int

---

(source_file
  (type_annotation
    name: (identifier)
    type: (function_type
      (type_application
        constructor: (type_application
          constructor: (constructor)
          argument: (label_literal))
        argument: (constructor))
      (constructor))))

===============
Label literal in forall with Label kind
===============

f :: \(l: Label) s r. Effect { l: s | r } s

---

(source_file
  (type_annotation
    name: (identifier)
    type: (forall_type
      (kinded_variable
        name: (identifier)
        kind: (constructor))
      (identifier)
      (identifier)
      (type_application
        constructor: (type_application
          constructor: (constructor)
          argument: (row_type
            (row_field
              label: (identifier)
              type: (identifier))
            (identifier)))
        argument: (identifier)))))
